--- a/css/headerOrFooter.css
+++ b/css/headerOrFooter.css
@@ -11,6 +11,7 @@
   width:1200px;
   margin: 0 auto;
   height:100%;
+  position: relative;
 }
 
 .logo {
@@ -48,12 +49,62 @@
   width: 80px;
   margin: 0px 20px;
   text-align: center;
+}
+ 
+ /*这是登录后的显示*/
+.qcacg-header-parent .qcacg-header .nav-right .liBlock {
+  width: 45px;
+  height: 45px;
+  border-radius: 22.5px;
+  background-image: url(../img/232x232.jpg);  
+  margin: 2px 30px 0 30px;
+  float:left;
+  line-height: 45px;
+  text-align: center;
+  cursor: pointer;
   }
+.qcacg-header-parent .qcacg-header .liBlock .headers_display {
+  background-color: white;
+  width: 200px;
+  height: 80px;
+  position:absolute;
+  top: 46px;
+  right: 50px;
+  box-shadow: 1px 1px 5px rgba(0,0,0,0.3);
+  display: none;
+}
+.qcacg-header-parent .qcacg-header .liBlock:hover .headers_display {
+  display: block;
+}
+.qcacg-header-parent .qcacg-header .nav-right .headers_display a{
+  cursor: pointer;
+}
+.qcacg-header-parent .qcacg-header .nav-right .headers_display .display_user{
+  padding-right: 100px;
+  padding-left: 5px;
+}
+.qcacg-header-parent .qcacg-header .nav-right  .headers_display span{
+  display: inline-block;
+  
+  
+}
+.qcacg-header-parent .qcacg-header .nav-right .headers_display .header_more {
+  height: 30px;
+  width: 200px;
+  background-color: #D3D3D3;
+  line-height: 30px;
+  margin-top: 10px;
+  line-height: 30px;
+  text-align: center;
+ 
+}
+  
 .qcacg-header-parent .qcacg-header .nav-left li a {
   color: #000000;
 }
 .qcacg-header-parent .qcacg-header .nav-right li a {
   color: #000000;
+  
 }
 .qcacg-header-parent .qcacg-header .nav-right li a:hover {
   color:#2863b4;
@@ -61,6 +112,7 @@
 .qcacg-header-parent .qcacg-header .nav-right li.publication {
   width:75px;
   height: 56px;
+  margin: 0;
   border-radius: 0 0 8px 8px;
   background-color: #3883e9;
   color: #FFFFFF;
