--- a/css/headerOrFooter.css
+++ b/css/headerOrFooter.css
@@ -56,7 +56,8 @@
   width: 45px;
   height: 45px;
   border-radius: 22.5px;
-  background-image: url(../img/232x232.jpg);  
+  background-size: contain; 
+  border: 1px solid #ccc;
   margin: 2px 30px 0 30px;
   float:left;
   line-height: 45px;
