--- a/view/login.html
+++ b/view/login.html
@@ -39,10 +39,12 @@
 		</div>
 		<myfooter></myfooter>
 	</body>
+	<script src="../js/apis/conf.js"></script>
 	<script src="../js/apis/vueHttp.js"></script>
-  <script src="../js/apis/conf.js"></script>
-	<script type="text/javascript" src="../js/vue.min.js" ></script>
-	<script type="text/javascript" src="../js/components/header.js" ></script>
+	<script type="text/javascript" src="../js/vue.min.js"></script>
+	<script type="text/javascript" src="../js/vue-resource.min.js" ></script>
+  <script type="text/javascript" src="../js/vue-router.min.js" ></script>
+  <script type="text/javascript" src="../js/components/header.js" ></script>
 	<script type="text/javascript" src="../js/components/footer.js" ></script>
 	<script type="text/javascript" src="../js/require/headerOrfooter.js"></script>	
 	
