--- a/view/register.html
+++ b/view/register.html
@@ -48,12 +48,14 @@
 	</body>
 
 
-<script src="../js/apis/vueHttp.js"></script>
-  	<script src="../js/apis/conf.js"></script>
-	<script type="text/javascript" src="../js/vue.min.js" ></script>
-	<script type="text/javascript" src="../js/components/header.js" ></script>
-	<script type="text/javascript" src="../js/components/footer.js" ></script>
-	<script type="text/javascript" src="../js/require/headerOrfooter.js"></script>
+  <script src="../js/apis/conf.js"></script>
+  <script src="../js/apis/vueHttp.js"></script>
+  <script type="text/javascript" src="../js/vue.min.js"></script>
+  <script type="text/javascript" src="../js/vue-resource.min.js" ></script>
+  <script type="text/javascript" src="../js/vue-router.min.js" ></script>
+  <script type="text/javascript" src="../js/components/header.js" ></script>
+  <script type="text/javascript" src="../js/components/footer.js" ></script>
+  <script type="text/javascript" src="../js/require/headerOrfooter.js"></script>  
 
 <script type="text/javascript" src="../js/jquery-1.11.1.js"></script>
 <script type="text/javascript" src="../js/jquery-ui.min.js" ></script>
