--- a/view/read_book.html
+++ b/view/read_book.html
@@ -75,9 +75,9 @@
 	
 	
 	<div 
-		v-if="fixed" 
+		v-show="fixed" 
 		v-on:click="fixedFn"
-		style="position: fixed;top: 0px;bottom: 0px;left: 0px;right: 0px;z-index: 1050; " class=" modal modal-setting fade in">
+		style="display: none;position: fixed;top: 0px;bottom: 0px;left: 0px;right: 0px;z-index: 1050; " class=" modal modal-setting fade in">
 		<div class="modal-dialog">
 			<div class="modal-content" v-on:click="settingFn">
 				<div class="modal-header">
@@ -142,7 +142,7 @@
 
 	</body>
 	<script src="../js/apis/vueHttp.js"></script>
-  	<script src="../js/apis/conf.js"></script>
+  <script src="../js/apis/conf.js"></script>
 	<script type="text/javascript" src="../js/vue.min.js" ></script>
 	<script type="text/javascript" src="../js/vue-resource.min.js" ></script>
  	<script type="text/javascript" src="../js/vue-router.min.js" ></script>
