--- a/css/user_info.css
+++ b/css/user_info.css
@@ -1292,13 +1292,18 @@
 .numberAItwo4  .verify {
 	color: white;
 	display: inline-block;
-	background-image: url(../img/gerenxinxi_13.jpg);
+	background-color: #169BD5;
 	text-align: center;
 	width: 70px;
 	height: 22px;
 	font-size: 12px;
 	padding-top: 5px;
 	margin-left: 20px;
+	border-radius: 4px;
+	cursor: pointer;
+}
+.numberAItwo4  .verify:hover {
+  background-color: #03A9F4;
 }
 
 .book-navAI .book-img {
