--- a/view/login.html
+++ b/view/login.html
@@ -26,7 +26,7 @@
 				</p>
 				<p class="line">
 					<input type="checkbox" checked="checked" class="Login_input"/>
-					<label>记住登入状态</label>
+					<label>记住账号</label>
 				</p>
 				<div id="popup-captcha"></div>
 				<a class="btn btn_submit a" id="btn-login">登入</a>
