--- a/css/index.css
+++ b/css/index.css
@@ -328,10 +328,11 @@
 		float: right;
 	}
 	.index .sidebar .sidebar_content .sidebar_cont ul  .sidebar_tit {
-		width: 74px;
+		  width: 130px;
 	    overflow: hidden;
 	    white-space: nowrap;
 	    text-overflow: ellipsis;
+	    text-align: left;
 	} 
 	.index .sidebar p {
 		width: 278px;
@@ -500,15 +501,8 @@
 	    -webkit-box-orient: vertical;
 	}
 	.index .Side .Side_content .Side_con ul .Side_surname {
-		font-size: 12px;
-		color: rgb(205, 205, 205);
 		width: 196px;
-		height: 30px;
-		line-height: 14px;
-	    overflow: hidden;
-	    display: -webkit-box;
-	    -webkit-line-clamp: 2;
-	    -webkit-box-orient: vertical;
+		height: 45px;
 	}
 	.index .Side .Side_content .Side_con ul .Side_card {
 		  float: left;
@@ -516,7 +510,7 @@
 	    white-space: nowrap;
 	    overflow: hidden;
 	    text-overflow: ellipsis;
-	    font-size: 12px;
+	    font-size: 14px;
 	    line-height: 21px;
 	    padding-left: 5px;
 	    
@@ -614,7 +608,7 @@
 	}
 	.index .New .New_title .New_update {
 		width: 853px;
-		height: 474px;
+		height: 510px;
 		border: 1px solid #e6e6e6;
 		margin-top: 18px;
 	}
@@ -723,24 +717,18 @@
 	    -webkit-box-orient: vertical;
 	}
 	.index .Word .Word_content .Word_con ul .Word_surname {
-		font-size: 12px;
-		color: rgb(205, 205, 205);
 		width: 196px;
-		height: 30px;
-		line-height: 14px;
-	    overflow: hidden;
-	    display: -webkit-box;
-	    -webkit-line-clamp: 2;
-	    -webkit-box-orient: vertical;
+		height: 45px;
+
 	}
 	.index .Word .Word_content .Word_con ul .Word_card {
-		float: left;
-		width: 80px;
+		  float: left;
+		  width: 80px;
 	    white-space: nowrap;
 	    text-overflow: ellipsis;
 	    overflow: hidden;
 	    
-	    font-size: 12px;
+	    font-size: 14px;
 	    line-height: 21px;
 	}
 	.index .Word .Word_content .Word_con ul .Word_card img {
@@ -755,8 +743,10 @@
 	    width: 110px;
 	    float: left;
 	    text-align: right;
-	    color: #E74C3C;
+	    color: #008080;
 	    padding-top: 3px;
+	    font-size: 15px;
+	    
 	}
 
 
@@ -817,8 +807,8 @@
 	}
 	.index  .hide label {
 		position: absolute;
-		top: 34px;
-		
+		top: 30px;
+		left: 72px;
 		
 		white-space: nowrap;
     
@@ -831,11 +821,10 @@
 	}
 	.index  .hide .hide_ul li {
 		height:35px;
-		line-height: 30px;
+		line-height: 35px;
 		width: 120px;
-	    white-space: nowrap;
-	   
-	    text-overflow: ellipsis;
+	  white-space: nowrap;
+	  text-overflow: ellipsis;
 	}
 	.index  .Small {
 		width: 125px;
@@ -846,13 +835,13 @@
 		opacity: 0;
 		z-index: 1;
 	}
-	.index  .Small img {
+	.index .Small img {
 		margin: 8px 0px 0 5px;
 	}
-	.index  .Small label {
+	.index .Small label {
 		position: absolute;
-		top: 34px;
-		right: 5px;
+		top: 30px;
+		right: 12px;
 		width: 50px;
 		overflow: hidden;
     white-space: nowrap;
@@ -860,20 +849,21 @@
 	}
 	.index  .Small .Small_ul {
 		position: absolute;
-		bottom: 10px;
-		left: 11px;
+		bottom: 20px;
+		left: 15px;
 	}
 	.index  .Small .Small_ul li {
-		height:14px;
-		line-height: 14px;
-		width: 100px;
+	   	height:14px;
+		  line-height: 14px;
+		  width: 100px;
 	    white-space: nowrap;
 	    overflow: hidden;
 	    text-overflow: ellipsis;
+	    margin-top: 10px;
 	}
 	.imgHeadPortrait {
-	  height: 64px;
-	  width: 64px;
+	  height: 46px;
+	  width: 46px;
 	  border:  solid 1px  #C4C4C4;
 	  border-radius: 64px;
 	}
