--- a/view/user_info.html
+++ b/view/user_info.html
@@ -17,10 +17,10 @@
     <div class="user_info_account">
      huhuf5
     </div> 
-    <div class="user_info_btn_qiandaoY btn" style="display: none;">
+    <div class="user_info_btn_qiandaoY " style="display: none;">
      已签到
     </div> 
-    <div class="user_info_btn_qiandao btn">
+    <div class="user_info_btn_qiandao ">
      签到
     </div> 
     <div class="user_info_nva clear"> 
