--- a/css/main.css
+++ b/css/main.css
@@ -333,38 +333,42 @@ a {
     			    position: absolute;
 					    left: 70px;
 					    padding-right: 80px;
-					    top: 25px;
+					    top: 30px;
     		}
     		.class-content .line-vertical .vertical-img .vertical-font-size {
     			position: absolute;
-    			top: 105px;
+    			top: 80px;
     			padding-right: 20px;
-    			
+    			left: 25px;
     		}
     		
     		.class-content .line-vertical .vertical-img .vertical-click-size {
     			position: absolute;
-    			top: 130px;
+    			top: 110px;
     			padding-right: 20px;
+    			left: 25px;
     		}
     		.class-content .line-vertical .vertical-img .vertical-collection-size {
     			position: absolute;
-    			top: 155px;
+    			top: 140px;
     			padding-right: 20px;
+    			left: 25px;
     		}
     		.class-content .line-vertical .vertical-img .vertical-a-reward {
     			position: absolute;
-    			top: 180px;
+    			top: 170px;
     			padding-right: 20px;
+    			left: 25px;
     		}
     		.class-content .line-vertical .vertical-title {
       		padding-top: 12px;
 			    width: 150px;
 			    height: 60px;
-			    font-size: 18px;
+			    font-size: 16px;
 			    text-align: center;
 			    margin: 0 auto;
 			    cursor: pointer;
+			    
 			    /*
 			    overflow: hidden;
 			    text-overflow: ellipsis;
