--- a/view/ranking.html
+++ b/view/ranking.html
@@ -69,8 +69,8 @@
 	  			<li v-if="RequestObj.timeRank === 2">字数：{{obj.bookWordCount}}</li>
 	  			
 	  		</ul>
-	  		<a @click="setCollect(obj.bookId)" v-if="obj.collect" class="ranking_Collection btn" href="javascript:;">取消收藏</a>
-	  		<a @click="setCollect(obj.bookId)" v-else class="ranking_AddToCollection btn" href="javascript:;">添加收藏</a>
+	  		<a @click="setCollect(obj.bookId)" v-if="obj.collect" class="ranking_Collection " href="javascript:;">取消收藏</a>
+	  		<a @click="setCollect(obj.bookId)" v-else class="ranking_AddToCollection " href="javascript:;">添加收藏</a>
 	  	</div>
 
 	  </div>
