--- a/view/catalog.html
+++ b/view/catalog.html
@@ -74,43 +74,41 @@
 					</div>
 				<div class="text_input">
 					<ul>
-						<li><a href="javascript:;"><img src="../img/sss8.jpg"/></a></li>
-						<li><textarea></textarea></li>
+						<li class="user_head"><a href="javascript:;"><img src="../img/sss8.jpg"/></a></li>
+						<li ><textarea></textarea></li>
+						<li class="MessageBtn"><span>发表评论</span></li>
 					</ul>
-					<a class="text_Submit" href="javascript:;">评论</a>
-					<div class="text_chart">
-						<a href="javascript:;"><img src="../img/sss6.jpg" style="padding: 0 12px 0 0;"/></a>
-						<a href="javascript:;"><img src="../img/sss5.jpg" /></a>
-					</div>	
+					
+					
 					<div class="text_sort active">
 						<ul>
 							<li class="active">默认排序</li>
-							<li>按回复数量</li>
+							<li>按回复数</li>
 							
 						</ul>
 					</div>
 					<div class="text_user">
 						<a href="javascript:;"><img src="../img/sss8.jpg"/ ></a>
-						<ul>
-							<li>
-								<a href="javascript:;" class="user_a" title="我是我是我我是我是我我是我是我我是我是我我是我是我我是我是我我是">huhuhf5</a>
+						<ul class="mes_head">
+							<li style="margin-top:5px;">
+								<a href="javascript:;" class="user_a" title="我是我是我我是我是我我是我是我我是我是我我是我是我我是我是我我是">明珠求瑕</a>
 								<a href="javascript:;" class="user_Top">置顶</a></li>
-							<li><span class="user_comment" title="我是比企······我是比企谷八幡比企谷八幡比企谷八幡比企谷八幡比企谷八幡比企谷八幡比企谷八幡比%#￥%#~~~~~~~~~~~·······我是比企谷八幡比企谷八幡比企谷八幡比企谷八幡比企谷八幡比企谷八幡">
-									我是比企······我是比企谷八幡比企谷八幡比企谷八幡比企谷八幡比企谷八幡比企谷八幡比企谷八幡比%#￥%#~~~~~~~~~~~·······我是比企谷八幡比企谷八幡比企谷八幡比企谷八幡比企谷八幡比企谷八幡比企谷八幡比%#￥%#~幡····················！@#￥！@￥@#比企谷八幡比企谷八幡比企谷八幡比企谷八幡比企谷八幡比企谷八幡比企谷八幡比企谷八幡比企谷八幡
+							<li><span class="user_comment" title="">
+									我是比企······我是比企谷八幡比企谷八幡比企谷八幡比企谷八
 								</span>
 							</li>	
+							<li>
+							  <ul class="updata_mes">
+							      <li class="mess1">1楼</li>
+							      <li class="mess1">2016-12-12</li>
+							      <li class="mess1">18：00</li>
+							      <li class="mess1">回复</li>
+							      <li class="mess1">举报</li>
+							  </ul>
+							</li>
 						</ul>
-					<div class="text_Open">
-							<a href="javascript:;" ><img src="../img/sss23.png"/></a>
-							<a href="javascript:;" ><text>展开全文</text></a>
-					</div>
-					<div class="text_Stop">
-						<ul>
-							<li>8月16日</li>
-							<li>15：46</li>
-							<li class="Stop_Reply">收起回复</li>
-						</ul>
-					</div>
+				
+					
 					<div class="text_Reply">
 						<div  class="text_Reply_user">
 							<div class="text_Reply_uesr_img"></div>		
@@ -120,12 +118,9 @@
 						    </div>
 						</div>
 					</div>
-					<div class="Reply_Underline"></div>
+					
 				</div>
-				<div class="text_user active">
-						
-					<div class="Reply_Underline"></div>
-				</div>
+				
 				
 					
 			</div>
@@ -152,8 +147,8 @@
 					</div>
 					<ul class="clear">
 						<li :style="'left:' + $index * 84 + 'px;' + 'transform:translateX(' + 84 * zindex +'px);'"  v-for="obj in booktTitle">
-							<a href="javascript:;"> <img :src="path.rootPath + obj.bookCoverImage" /></a>
-							<a class="works_a"  href="javascript:;" class="span span_author" title="{{ obj.bookName }}">{{ obj.bookName }}</a>
+							<a :href="path.TemprootPath + '/view/catalog.html?bookId=' + obj.bookId"> <img :src="path.rootPath + obj.bookCoverImage"  /></a>
+							<a class="works_a"  :href="path.TemprootPath + '/view/catalog.html?bookId=' + obj.bookId" class="span span_author" title="{{ obj.bookName }}">{{ obj.bookName }}</a>
 						</li>
 					</ul>
 				</div>
