--- a/view/read_book.html
+++ b/view/read_book.html
@@ -12,7 +12,7 @@
 </style>
 <script type="text/javascript" src="../js/vue.js" ></script>
 	</head>
-	<body  id="app" 
+	<body  id="app" @keydown="keyDownFn"
 		v-bind:style="fixed === true? 'font-family: FontAwesome;overflow:hidden':'font-family: FontAwesome;'">
 		<div class="hezi" style="float: right; position: relative; right: 480px; top: 450px;">
 		<div id="book-tool" class="book-tool">
@@ -25,8 +25,12 @@
       <a v-on:click="lampFn" id="btn-light" title="夜间模式" class="light" ><i class="fa fa-lightbulb-o"></i></a>
     </div>
     <div class="tool-bottom">
-      <a id="btn-prev-tool" title="上一章" class="prev js-link-state"><i class="fa fa-angle-left"></i></a>
-      <a id="btn-next-tool" title="下一章" class="next js-link-state" href=""><i class="fa fa-angle-right"></i></a>
+      <a v-if="previousContent.contentId" id="btn-prev-tool" title="上一章" class="prev js-link-state" :href="path.TemprootPath + '/view/read_book.html?contentId=' + previousContent.contentId + '&bookId='+ previousContent.bookId"><i class="fa fa-angle-left"></i></a>
+      <a v-else id="btn-prev-tool" title="上一章" class="prev js-link-state" href="javascript:;"><i class="fa fa-angle-left"></i></a>
+      
+      <a v-if="nextContent.contentId" id="btn-next-tool" title="下一章" class="next js-link-state" :href="path.TemprootPath + '/view/read_book.html?contentId=' + nextContent.contentId + '&bookId='+ nextContent.bookId"><i class="fa fa-angle-right"></i></a>
+      <a v-else id="btn-next-tool" title="下一章" class="next js-link-state" href="javascript:;"><i class="fa fa-angle-right"></i></a>
+    
     </div>
   </div>
 	</div>	
@@ -45,7 +49,7 @@
 						<i class="fa fa-angle-right"></i>
 						<a :href="path.TemprootPath + '/view/catalog.html?bookId=' + bookcontent.bookId">{{bookcontent.bookName}}</a>
 						<i class="fa fa-angle-right"></i>
-						<span>人物卡</span>
+						<span>{{bookcontent.contentTitle}}</span>
 					</p>
 					<h1 class="title">{{bookcontent.contentTitle}}</h1>
 					<p class="info-top">
@@ -67,7 +71,10 @@
 					
 				</div>
 				<div class="book-bottom">
-					<p class="next-page" ><a href="" class="js-link-state">点击进入下一章<i class="fa fa-angle-right"></i></a></p>
+					<p class="next-page" >
+					  <a v-if="nextContent.contentId" :href="path.TemprootPath + '/view/read_book.html?contentId=' + nextContent.contentId + '&bookId='+ nextContent.bookId" class="js-link-state">点击进入下一章<i class="fa fa-angle-right"></i></a>
+					  <a v-else href="javascript:;" class="js-link-state">点击进入下一章<i class="fa fa-angle-right"></i></a>
+          </p>
 					<p class="hint-page">按键盘上的 ←（左）键和 →（右）键可以快速切换章节</p>
 				</div>
 			</div>
@@ -170,17 +177,30 @@
   				name:'565',
   				bookTitle:'',
   				works:'',
+  				nextContent: {},
+  				previousContent: {},
   			},
   			methods: {
+  			  keyDownFn: function(e) {
+  			    if(e.keyCode == 37 && this.previousContent.contentId) {
+  			      location.href = this.path.TemprootPath + '/view/read_book.html?contentId=' + this.previousContent.contentId + '&bookId='+ this.previousContent.bookId;
+  			    }
+  			    if(e.keyCode == 39 && this.nextContent.contentId) {
+               location.href = this.path.TemprootPath + '/view/read_book.html?contentId=' + this.nextContent.contentId + '&bookId='+ this.nextContent.bookId;
+            }
+  			  },
   				getValueFn: function() {
   				var _data = {};
   				_data.rankList = 0;
-          _data.contentId = this.id;
+          _data.contentId = this.contentId;
+          _data.bookId = this.bookId;
 			    SZXJ.http('get', PathList.findContent, _data, (response) => {
-			      this.bookcontent = response.data;
-			      this.bookName =response.data;
+			      console.log(response);
+			      this.nextContent = response.data.nextContent;
+			      this.previousContent = response.data.previousContent;
+			      this.bookcontent = response.data.content;
+			      this.bookName = response.data.content.bookName;
 			      this.$els.bookcontent.innerHTML = this.bookcontent.content;
-			     	console.log(response);
 			    });
   				},
   				settingShow: function() {
@@ -281,8 +301,8 @@
   				
   			},
   			ready: function() {
-			    var href = window.location.href;
-       	  this.id = href.substring(href.lastIndexOf('?id=') + 4, href.length); 
+			    this.contentId = SZXJ.getQueryString('contentId');
+			    this.bookId = SZXJ.getQueryString('bookId');
        	  this.getValueFn();
       	},
 		});
