--- a/view/user_info.html
+++ b/view/user_info.html
@@ -85,12 +85,12 @@
  <script type="text/javascript" src="../js/vue.min.js" ></script>
  <script type="text/javascript" src="../js/vue-resource.min.js" ></script>
  <script type="text/javascript" src="../js/vue-router.min.js" ></script>
- 
  <script src="../js/apis/vueHttp.js"></script>
  <script src="../js/apis/conf.js"></script>
-  
+ <script src="../js/apis/Data.js"></script>
+ <script src="../js/components/works.js"></script> 
  <script src="../js/components/works.js"></script>
-  <script src="../js/components/worksUpdate.js"></script>
+ <script src="../js/components/worksUpdate.js"></script>
  <script src="../js/components/header.js"></script>
  <script src="../js/components/footer.js"></script>
  <script src="../js/components/bookBlockList.js"></script>
